[package]
name = "price-oracle"
version = "0.6.0"
authors = ["Eugene The Dream <ek@proximity.dev>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "=4.0.0-pre.7"
near-sys = "=0.1"

[dev-dependencies]
near-sdk-sim = "=4.0.0-pre.7"
approx = "0.5"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true
